# metatron-backend

./: Cargo.toml  Dockerfile  build.rs  manage.sh
.claude/: settings.json
.claude/agents/: distinguished-engineer.md  senior-frontend-engineer.md  senior-qa-engineer.md  svelte-specialist.md  ux-designer.md
.claude/commands/: clean.md  create-pr.md  review-pr.md  review-security.md  setup-project.md  summon.md  update-confluence.md
.claude/includes/: attribution-reminder.md  authentication-reminder.md
.claude/knowledge/: agent-workflows.md  api-reference.md  project-context.md  team-learnings.md
proto/: analytics.proto  auth.proto  pipeline.proto
src/: config.rs  main.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
src/databend/: mod.rs
src/db/: mod.rs
src/db/migrations/: 001_initial.sql
src/graphql/: analytics.rs  clusters.rs  dashboard.rs  finops.rs  mod.rs
src/grpc_client/: cluster.rs  finops.rs  mod.rs
src/rbac/: engine.rs  mod.rs  types.rs
src/rest/: auth_routes.rs  mod.rs
src/websocket/: mod.rs
