[package]
name = "metatron-backend"
description = "Metatron API Server — GraphQL + REST + gRPC backend for the unified platform"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Metratron Team"]

[[bin]]
name = "metatron-api"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# gRPC / protobuf
tonic = { version = "0.12", features = ["tls-roots"] }
tonic-web = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP framework (axum 0.8 to match async-graphql-axum)
axum = { version = "0.8", features = ["tokio", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# GraphQL (pinned for rustc 1.87 compat)
async-graphql = { version = "=7.0.14", features = ["chrono", "uuid"] }
async-graphql-axum = "=7.0.14"

# Database — PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Database — Databend
databend-driver = { version = "0.22", features = ["rustls"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Encryption for credentials at rest
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

[build-dependencies]
tonic-build = "0.12"
